# Games101Task

./: .gitignore  CMakeLists.txt  README.md
dependencies/OpenCV2/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
task0/: CMakeLists.txt  main.cpp  task01.cpp
task01/: task01.cpp
task1/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt  main.cpp  rasterizer.cpp
task3/: CMakeLists.txt  main.cpp  rasterizer.cpp  test.cpp
task4/: CMakeLists.txt  main.cpp
task5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
task6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
task7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp
